# hms-project

./: .gitignore  CMakeLists.txt  README.md
data/: appointments.txt  doctors.txt  patients.txt
frontend/: app.js  index.html  styles.css
src/: hospital_system.cpp  hospital_system.h  main.cpp  web_server.cpp
